--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
-  "name": "hull",
-  "version": "1.0.1",
-  "description": "JavaScript library that builds concave hulls by set of points",
-  "main": "./src/hull.js",
-  "dependencies": {
-    "browserify": "5.10.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/AndreyGeonya/hull.git"
-  },
-  "keywords": [
-    "geometry",
-    "concave-hull",
-    "math"
-  ],
-  "author": "Andrey Geonya",
-  "license": "BSD"
+    "name": "Hull.js",
+    "version": "1.0.0",
+    "description": "JavaScript library that builds concave hulls (shapes) by set of points",
+    "homepage": "https://github.com/AndreyGeonya/hull",
+    "keywords": [
+        "geometry",
+        "concave-hull",
+        "math",
+        "alpha-shape",
+        "algorithm"
+    ],
+    "author": "Andrey Geonya <a.geonya@gmail.com>",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/AndreyGeonya/hull"
+    },
+    "main": "./src/hull.js",
+    "devDependencies": {
+        "mocha": "~1.18.2",
+        "jshint": "~2.5.0",
+        "browserify": "~5.11.0"
+    },
+    "scripts": {
+        "test": "./node_modules/browserify/bin/cmd.js ./src/hull.js --standalone hull > ./dist/hull.js && ./node_modules/jshint/bin/jshint src/hull.js && ./node_modules/.bin/mocha -R spec"
+    },
+    "jshintConfig": {
+        "forin": false,
+        "node": true
+    },
+    "license": "BSD"
 }
