--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     },
     "main": "./src/hull.js",
     "dependencies": {
-        "static-kdtree": "~1.0.1"
+        "rbush": "~1.3.4"
     },
     "devDependencies": {
         "mocha": "~1.18.2",
