--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "browserify": "~5.11.0"
     },
     "scripts": {
-        "test": "./node_modules/browserify/bin/cmd.js ./src/hull.js --standalone hull > ./dist/hull.js && ./node_modules/jshint/bin/jshint src/hull.js && ./node_modules/.bin/mocha -R spec"
+        "test": "./node_modules/jshint/bin/jshint src/intersect.js && ./node_modules/jshint/bin/jshint src/grid.js && ./node_modules/jshint/bin/jshint src/hull.js && ./node_modules/.bin/mocha -R spec && ./node_modules/browserify/bin/cmd.js ./src/hull.js --standalone hull > ./dist/hull.js"
     },
     "jshintConfig": {
         "forin": false,
