--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Hull.js",
+    "name": "hull.js",
     "version": "0.2.0",
     "description": "JavaScript library that builds concave hulls (shapes) by set of points",
     "homepage": "https://github.com/AndreyGeonya/hull",
@@ -13,7 +13,7 @@
     "author": "Andrey Geonya <a.geonya@gmail.com>",
     "repository": {
         "type": "git",
-        "url": "https://github.com/AndreyGeonya/hull"
+        "url": "git://github.com/AndreyGeonya/hull.git"
     },
     "main": "./src/hull.js",
     "devDependencies": {
