--- a/bower.json
+++ b/bower.json
@@ -1,31 +1,31 @@
 {
-  "name": "hull",
-  "version": "0.2.5",
-  "homepage": "https://github.com/AndriiHeonia/hull",
-  "authors": [
-    "Andrii Heonia <a.heonia@gmail.com>"
-  ],
-  "description": "JavaScript library that builds concave hulls (shapes) by set of points",
-  "main": "./dist/hull.js",
-  "keywords": [
-    "geometry",
-    "concave-hull",
-    "math",
-    "alpha-shape",
-    "algorithm"
-  ],
-  "license": "BSD",
-  "ignore": [
-    "node_modules",
-    "bower_components",
-    "test",
-    "readme-imgs",
-    "debug",
-    "src",
-    "**/.*"
-  ],
-  "repository": {
-      "type": "git",
-      "url": "git://github.com/AndriiHeonia/hull.git"
-  }
+    "name": "hull-js",
+    "version": "0.2.5",
+    "description": "JavaScript library that builds concave hulls (shapes) by set of points",
+    "homepage": "https://github.com/AndriiHeonia/hull",
+    "keywords": [
+        "geometry",
+        "concave-hull",
+        "math",
+        "alpha-shape",
+        "algorithm"
+    ],
+    "authors": [
+        "Andrii Heonia <a.heonia@gmail.com>"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/AndriiHeonia/hull.git"
+    },
+    "main": "./dist/hull.js",
+    "license": "BSD",
+    "ignore": [
+        "node_modules",
+        "bower_components",
+        "test",
+        "readme-imgs",
+        "debug",
+        "src",
+        "**/.*"
+    ]
 }
