fix issue #22 (no formatting in case of 3 points) and remove bower

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "hull.js",
-    "version": "1.0.2",
-    "description": "JavaScript library that builds concave hulls (shapes) by set of points",
+    "version": "1.0.3",
+    "description": "JavaScript library that builds concave hulls (shapes) by the set of points",
     "homepage": "https://github.com/AndriiHeonia/hull",
     "keywords": [
         "geometry",
